# desearch.py

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
datura_py/: api.py  protocol.py
desearch_py/: __init__.py  api.py  models.py
docs/: architecture.md  conf.py  features.md  known-issues.md
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/decisions/: 0001-document-current-sdk-behavior.md
tests/: test_response_metadata.py
