[tool.poetry]
authors = ["Desearch AI <hello@desearch.ai>"]
description = "Python SDK for Desearch API."
name = "desearch-py"
readme = "README.md"
version = "1.1.0"

[tool.poetry.dependencies]
aiohttp = ">=3.8"
pydantic = ">=2.0"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
docutils = "^0.21.2"
python-dotenv = "^1.0.1"
setuptools = "^74.0.0"
sphinx = "^7.0.0"
twine = "^5.1.1"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[virtualenvs]
in-project = true
